add updateUserHandler, updateUserToAdminHandler
