# docs/swagger.json
@@ -172,6 +172,34 @@
                 "responses": {}
             }
         },
+        "/user/admin/{id}": {
+            "patch": {
+                "description": "Update user into admin by id (Admin Only)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Update user to admin",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "uuid",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Cookie",
+                        "in": "header"
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/user/all": {
             "get": {
                 "description": "Get all users data",
@@ -183,6 +211,43 @@
                 ],
                 "summary": "Get all users",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Cookie",
+                        "in": "header"
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/user/edit/{id}": {
+            "put": {
+                "description": "Update user data (Admin Only)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Update user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "uuid",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "User",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/UserEditRequest"
+                        }
+                    },
                     {
                         "type": "string",
                         "description": "token",
@@ -255,6 +320,26 @@
                 },
                 "stock": {
                     "type": "integer"
+                }
+            }
+        },
+        "UserEditRequest": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
